--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -141,11 +149,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>org.mybatis.spring.boot</groupId>-->
-        <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -268,26 +271,26 @@
             </plugins>
         </pluginManagement>
     </build>
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>nexus</id>-->
-            <!--<name>songguo public nexus</name>-->
-            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/groups/public</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
-    <!--<distributionManagement>-->
-        <!--<repository>-->
-            <!--<id>ttyc-songguo7-releases</id>-->
-            <!--<name>Songguo Nexus Releases Repository</name>-->
-            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/releases/</url>-->
-        <!--</repository>-->
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>songguo public nexus</name>
+            <url>https://maven.aliyun.com/repository/central/</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>ttyc-songguo7-releases</id>
+            <name>Songguo Nexus Releases Repository</name>
+            <url>https://maven.aliyun.com/repository/central/</url>
+        </repository>
 
-        <!--<snapshotRepository>-->
-            <!--<id>ttyc-songguo7-snapshots</id>-->
-            <!--<name>Songguo Nexus Snapshots Repository</name>-->
-            <!--<url>http://maven.corp.songguo7.com:8360/nexus/content/repositories/snapshots/</url>-->
-        <!--</snapshotRepository>-->
-    <!--</distributionManagement>-->
+        <snapshotRepository>
+            <id>ttyc-songguo7-snapshots</id>
+            <name>Songguo Nexus Snapshots Repository</name>
+            <url>https://maven.aliyun.com/repository/central/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <modules>
         <module>web</module>
